# chanfast

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
include/: check.h  decomp.h  fft.h  fourth.h  io.h  logging.h  mpi_plan.h  parser.h  rk3.h  tensor.h  transpose.h
include/chanfast/: check.h  decomp.h  mpi_plan.h  tensor.h  transpose.h
include/chanfast/consts/: fd4.h  rk3.h
include/chanfast/params/: args.h  grid.h  sim.h
src/: CMakeLists.txt  chanfast.c  check.h  decomp.c  decomp.cpp  fft.c  fourth.c  globals_sim.h  io.c  logging.c  main.c  mpi_plan.c  mpi_plan.cpp  parser.h  rk3.c  tensor.c  tensor.cpp  transpose.c
test/: test_mpi_plan.h  test_tensor.h  test_transpose.h
tests/: CMakeLists.txt  test_decomp.cpp
